gitops/webhooks/webhook-components.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook-ingress
  namespace: ebpf-security
  labels:
    app.kubernetes.io/name: tekton-webhook
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ebpf-ai-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: webhook.apps.k8s.labjp.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-github-webhook-listener
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: el-github-webhook-listener
  namespace: ebpf-security
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook-listener
spec:
  type: NodePort
  ports:
    - name: http-listener
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30082
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook-listener
